@@ -558,94 +558,3 @@ int	b_universe(int argc, char *argv[],Shbltin_t *context)
 }
 #endif /* cmd_universe */
 
-#if SHOPT_FS_3D
-#if _UWIN
-#include <sys/mount.h>
-#endif
-#   if 0
-    /* for the dictionary generator */
-    int	b_vmap(int argc,char *argv[], Shbltin_t *context){}
-#   endif
-    int	b_vpath(register int argc,char *argv[], Shbltin_t *context)
-    {
-	register int flag, n;
-	register const char *optstr; 
-	register char *vend; 
-	register Shell_t *shp = context->shp;
-	if(argv[0][1]=='p')
-	{
-		optstr = sh_optvpath;
-		flag = FS3D_VIEW;
-	}
-	else
-	{
-		optstr = sh_optvmap;
-		flag = FS3D_VERSION;
-	}
-	while(n = optget(argv, optstr)) switch(n)
-	{
-	    case ':':
-		errormsg(SH_DICT,2, "%s", opt_info.arg);
-		break;
-	    case '?':
-		errormsg(SH_DICT,ERROR_usage(2), "%s",opt_info.arg);
-		break;
-	}
-	if(error_info.errors)
-		errormsg(SH_DICT,ERROR_usage(2),"%s",optusage((char*)0));
-#ifdef MS_3D
-	flag |= MS_3D;
-#else
-	if(!shp->gd->lim.fs3d)
-		goto failed;
-#endif
-	argv += opt_info.index;
-	argc -= opt_info.index;
-	switch(argc)
-	{
-	    case 0:
-	    case 1:
-		flag |= FS3D_GET;
-		if((n = mount(*argv,(char*)0,flag,0)) >= 0)
-		{
-			vend = stkalloc(shp->stk,++n);
-			n = mount(*argv,vend,flag|FS3D_SIZE(n),0);
-		}
-		if(n < 0)
-			goto failed;
-		if(argc==1)
-		{
-			sfprintf(sfstdout,"%s\n",vend);
-			break;
-		}
-		n = 0;
-		while(flag = *vend++)
-		{
-			if(flag==' ')
-			{
-				flag  = e_sptbnl[n+1];
-				n = !n;
-			}
-			sfputc(sfstdout,flag);
-		}
-		if(n)
-			sfputc(sfstdout,'\n');
-		break;
-	     default:
-		if((argc&1))
-			errormsg(SH_DICT,ERROR_usage(2),"%s",optusage((char*)0));
-		/*FALLTHROUGH*/
-	     case 2:
-		if(shp->subshell && !shp->subshare)
-			sh_subfork();
- 		for(n=0;n<argc;n+=2)
-			if(mount(argv[n+1],argv[n],flag,0)<0)
-				goto failed;
-	}
-	return(0);
-failed:
-	errormsg(SH_DICT,ERROR_exit(1),(argc>1)?e_cantset:e_cantget,(flag&FS3D_VIEW)?e_mapping:e_versions);
-	return(1);
-    }
-#endif /* SHOPT_FS_3D */
-
