@@ -100,15 +100,9 @@ const struct shtable2 shtab_variables[] =
 	".sh.math",	0,				(char*)0,
 	".sh.pool",	0,				(char*)0,
 	"SHLVL",	NV_INTEGER|NV_NOFREE|NV_EXPORT,	(char*)0,
-#if SHOPT_FS_3D
-	"VPATH",	0,				(char*)0,
-#endif /* SHOPT_FS_3D */
 #if SHOPT_MULTIBYTE
 	"CSWIDTH",	0,				(char*)0,
 #endif /* SHOPT_MULTIBYTE */
-#ifdef apollo
-	"SYSTYPE",	0,				(char*)0,
-#endif /* apollo */
 	"",	0,					(char*)0
 };
 
