@@ -1352,12 +1352,7 @@ int	sh_redirect(Shell_t *shp,struct ionod *iop, int flag)
 						struct stat sb;
 						if(stat(fname,&sb)>=0)
 						{
-#if SHOPT_FS_3D
-							if(S_ISREG(sb.st_mode)&&
-						                (!shp->gd->lim.fs3d || iview(&sb)==0))
-#else
 							if(S_ISREG(sb.st_mode))
-#endif /* SHOPT_FS_3D */
 							{
 								errno = EEXIST;
 								errormsg(SH_DICT,ERROR_system(1),e_exists,fname);
